--- a/src/main/resources/hudson/plugins/testng/Publisher/help-escapeExceptionMsg.html
+++ b/src/main/resources/hudson/plugins/testng/Publisher/help-escapeExceptionMsg.html
@@ -1,4 +1,6 @@
 <div>
-   <b>Escape exception messages?</b>
-   <p>If checked, the plug-in escapes the test method's exception messages. Unchecking this allows you to use HTML tags to format the exception message e.g. embed links in the text. (Enabled by default)</p>
+	<b>Escape exception messages?</b>
+	<p>If checked, the plug-in escapes the test method's exception
+		messages. Unchecking this allows you to use HTML tags to format the
+		exception message e.g. embed links in the text. (Enabled by default)</p>
 </div>
