--- a/src/main/resources/hudson/plugins/testng/Publisher/help-escapeTestDescp.html
+++ b/src/main/resources/hudson/plugins/testng/Publisher/help-escapeTestDescp.html
@@ -1,5 +1,7 @@
 <div>
-   <b>Escape Test Description string?</b>
-   <p>If checked, the plug-in escapes the description string associated with the test method while displaying
-            test method details. Unchecking this allows you to use HTML tags to format the description. (Enabled by default)</p>
+	<b>Escape Test Description string?</b>
+	<p>If checked, the plug-in escapes the description string
+		associated with the test method while displaying test method details.
+		Unchecking this allows you to use HTML tags to format the description.
+		(Enabled by default)</p>
 </div>
