--- a/src/main/resources/hudson/plugins/testng/Publisher/help-failedFails.html
+++ b/src/main/resources/hudson/plugins/testng/Publisher/help-failedFails.html
@@ -1,4 +1,5 @@
 <div>
-<b>Fails - Failed Threshold</b>
-   <p>A build is marked FAILURE if the number/percentage of failed tests exceeds the specified threshold.</p>
+	<b>Fails - Failed Threshold</b>
+	<p>A build is marked FAILURE if the number/percentage of failed
+		tests exceeds the specified threshold.</p>
 </div>
