--- a/src/main/resources/hudson/plugins/testng/Publisher/help-unstableSkips.html
+++ b/src/main/resources/hudson/plugins/testng/Publisher/help-unstableSkips.html
@@ -1,4 +1,5 @@
 <div>
-   <b>Skips - Unstable Threshold</b>
-   <p>A build is marked UNSTABLE if the number/percentage of skipped tests exceeds the specified threshold.</p>
+	<b>Skips - Unstable Threshold</b>
+	<p>A build is marked UNSTABLE if the number/percentage of skipped
+		tests exceeds the specified threshold.</p>
 </div>
