fixed incomplete sentence

--- a/src/main/resources/hudson/plugins/testng/Publisher/help-packageView.html
+++ b/src/main/resources/hudson/plugins/testng/Publisher/help-packageView.html
@@ -2,7 +2,7 @@
 	<b>Set package view as default?</b>
 	<p>If checked, the plug-in default view is set to the original view
 		where tests are sorted by package. If left unchecked, the new view
-		where tests are sorted by suite.</p>
+		where tests are sorted by suite is used.</p>
 
 	<p>A button will always be available to switch between the two
 		views, this option only sets the default behavior.</p>
